20000413-21:38 GMT-3 Luiz Rafael Culik <culik@sl.conex.net>
    *utils/hbdoc/hbdoc.prg
     utils/hbdoc/html.prg
        *Small changes
20000413-16:40 GMT+2 Chen Kedem <niki@actcom.co.il>
   * doc/en/dbstrux.txt
     * in __FLTEDIT() HARBOUR_STRICT_CLIPPER_COMPATIBILITY was changed into
       HB_C52_UNDOC as used by the source
     * insert explicit <b> marks to make Commands $ARGUMENTS$ bold

   * doc/en/terminal.txt
     * in ALERT() HARBOUR_STRICT_CLIPPER_COMPATIBILITY was changed into
       HB_C52_STRICT as used by the source
     * in ALERT() and __NONOALERT() the $COMPLIANCE$ section was extended
     + $PLATFORMS$ section for HB_OSNEWLINE()
     * a bit re-formating

20000413-12:32 GMT+1 Victor Szakats <info@szelvesz.hu>

   * source/compiler/genc.c
     ! JUMPFAR fix for 16 bit compilers.

   * source/compiler/genhrb.c
   * source/compiler/genjava.c
     + JUMPFAR support for .HRB and java output.

   * source/compiler/harbour.y
     - JUMPFAR TODO removed.

   (not yet tested)

   * make_gnu.*
   * bin/bld.*
   * config/dos/bcc16.cf
     + Added 4.x and 5.0x as a 16bit BC compiler.

20000413-12:14 GMT+1 Victor Szakats <info@szelvesz.hu>

   * include/hbver.h
     * Date bumped to indicate new pcode revision.

   * include/hbapi.h
     ! Fix for HB_EXTEND_API_MACROS

   * source/rdd/dbstrux.prg
     ! Small formatting.

20000413-01:30 GMT-8 Ron Pinkas <Ron@Profit-Master.com>

   * source/include/hbpcode.h
     + Added HB_P_JUMPFAR, HB_P_JUMPFARFALSE, and HB_P_JUMPFARTRUE

   * source/compiler/hvm.c
     + Added support for HB_P_JUMPFAR, HB_P_JUMPFARFALSE, and HB_P_JUMPFARTRUE to support longer than 2^15 jumps.

   * source/compiler/harbour.c
     * Enhanced hb_compGenJump(), hb_compGenJumpFalse(), hb_compGenJumpTrue(), hb_compGenJumpHere() and hb_compGenJumpThere()
       to utilize HB_P_JUMPFAR, HB_P_JUMPFARFALSE, and HB_P_JUMPFARTRUE to support longer than 2^15 jumps.

   * source/compiler/genc.c